--- a/entry.css
+++ b/entry.css
@@ -13,19 +13,29 @@ div {
 #title {
     width: 349px;
     height: 73px;
-
     font-family: 'Inter';
     font-style: normal;
     font-weight: 700;
     font-size: 60px;
     line-height: 73px;
-    /* identical to box height */
-    
 }
+
+/*retain design*/
+#title a {
+    text-decoration: none !important; 
+    color: #1E1E1E !important;         
+    display: inline-block;             
+    cursor: pointer;                  
+}
+
+
+
+
 
 .highlight {
     color: #579737;
 }
+
 
 /* Records */
 #record{
@@ -44,6 +54,17 @@ font-size: 45px;
 line-height: 54px;
 
 color: #1E1E1E;}
+
+/*retain design*/
+#record a {
+    text-decoration: none !important;  
+    color: #1E1E1E !important;        
+    display: inline-block;            
+    cursor: pointer;                   
+}
+
+
+
 
 /* New Entry */
 #newentry{
@@ -65,6 +86,16 @@ line-height: 54px;
 
 color: #1E1E1E;}
 
+/*retain design*/
+#newentry a {
+    text-decoration: none !important;  
+    color: #1E1E1E !important;        
+    display: inline-block;            
+    cursor: pointer;                   
+}
+
+
+
 /* Inbox */
 #inbox{
 position: absolute;
@@ -84,6 +115,16 @@ left: 410px;
 top: 10px;
 
 color: #1E1E1E;}
+
+/*retain design*/
+#inbox a {
+    text-decoration: none !important;  
+    color: #1E1E1E !important;        
+    display: inline-block;            
+    cursor: pointer;                   
+}
+
+
 
 /* Creat Entry */
 #entry{
@@ -369,7 +410,7 @@ color: #BEBEBE;}
             left: 1020px;
         }
 
-        
+
 
 
 
